# observational-memory

./: .gitignore  .venv  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  node_modules  pyproject.toml
.github/: CODEOWNERS
assets/: om-mail-demo.cast
docs/: MAINTAINERS.md  README.md  RELEASE-0.1.2.md  RELEASE-0.3.0.md  RELEASE-0.3.1.md  RELEASE-0.4.1.md  RELEASE-0.5.0.md  RELEASE-0.5.1.md  RELEASE-0.5.2.md  RELEASE-0.5.3.md  RELEASE-0.5.4.md  RELEASE-0.5.5.md  RELEASE-0.5.6.md  RELEASE-0.5.7.md  RELEASE-0.6.0.md  RELEASE-0.6.1.md  RELEASE-0.6.2.md  RELEASE-0.6.3.md  RELEASE-0.6.4.md  RELEASE-0.6.5.md  RELEASE-0.6.6.md  RELEASE-0.6.7.md  RELEASE-0.7.0.md  RELEASE-0.8.0.md  RELEASE-0.9.0.md  RELEASE-0.9.1.md  coexistence.md  configuration.md  hermes-plugin.md  install.md  integrations.md  mail-memory.md  om-cluster-p2p-evaluation.md  om-cluster-roadmap-status.md  om-cluster-sync-status.md  om-cluster-sync.md  om-cluster-validation.md  search-and-recall.md  talk-to-memories.md
plans/: aside-first-class-integration.md  auto-memory-integration.md  binary-desktop-installer-plan.md  desktop-middle-manager-plan.md  email-memory-substrate.md  grok-first-class-integration.md  hermes-first-class-plugin.md  okf-adoption-plan.md  om-mail-next-steps.md  om_cluster_post_0_6_hardening_plan.md  qmd-2.1-update.md  talk-to-memories.md  team-memory-direction.md  v0.6.5-account-auth.md  v0.6.5-goal.md  v0.6.7-release-plan.md  v0.8.0-design-decision.md  v0.8.0-plan.md  v0.8.0-release-plan.md
prompts/: observer.md  reflector.md
scripts/: bump_version.py  generate_homebrew_formula.py  validate_om_cluster_roadmap.py  verify_session_start_hooks.py
tests/: _scale_fixtures.py  conftest.py  test_auto_memory.py  test_backup_failclosed.py  test_backup_module.py  test_cli_backup.py  test_cli_context.py  test_cli_doctor.py  test_cli_export.py  test_cli_install.py  test_cli_observe.py  test_cli_prune_provenance.py  test_cli_recall.py  test_cli_search.py  test_cli_talk.py  test_cli_version.py  test_config.py  test_cost_latency.py  test_growth.py  test_homebrew_formula.py  test_jobs_batch.py  test_llm.py  test_observe.py  test_platform_export.py  test_qmd_bench_fixture.py  test_reflect.py  test_reflect_backup_trigger.py  test_reflection_metadata.py  test_reflection_sections.py  test_reflector_scale.py  test_reflector_sectioned.py  test_search.py  test_search_moss.py  test_session_start_hooks_fail_closed.py  test_startup_memory.py  test_startup_quality.py  test_talk_conversation.py  test_talk_recall.py  test_transcripts.py  (+1 more)
(+156 files in other folders)
