[project]
name = "observational-memory"
version = "0.1.2"
description = "Cross-agent observational memory for Claude Code and Codex CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Bryan Young", email = "obs-mem-pypi@intertwinesys.com"}
]
keywords = [
    "claude-code", "codex", "ai-memory", "observational-memory",
    "llm", "agent-memory", "developer-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Environment :: Console",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "click>=8.1.0",
    "rank-bm25>=0.2.2",
]

[project.urls]
Homepage = "https://github.com/intertwine/observational-memory"
Repository = "https://github.com/intertwine/observational-memory"
Issues = "https://github.com/intertwine/observational-memory/issues"

[project.scripts]
om = "observational_memory.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.8.0", "build>=1.0.0", "twine>=4.0.0"]
enterprise = [
    "anthropic[bedrock,vertex]>=0.40.0",
    "boto3>=1.34.0",
    "google-auth>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/observational_memory"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "twine>=6.2.0",
]
